syntax = "proto3";

option csharp_namespace = "Proto.Command.AiSettings";

service AiSettingsCommandProtoService {
  rpc SendChangeLanguageModel (ChangeLanguageModelCommandProto) returns (CommandResponse);
  rpc SendChangePrompt (ChangePromptCommandProto) returns (CommandResponse);
  rpc SendCreateAiSettings (CreateAiSettingsCommandProto) returns (CommandResponse);
}

message ChangeLanguageModelCommandProto {
  string aiSettingsId = 1;
  string languageModelPath = 2;
}

message ChangePromptCommandProto {
  string aiSettingsId = 1;
  string prompt = 2;
}

message CreateAiSettingsCommandProto {
  string aiSettingsId = 1;
  string prompt = 2;
  string languageModelPath = 3;
}

message CommandResponse {
  bool success = 1;
}
